--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "next-i18next": "^13.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.7",
     "react-icons": "^4.8.0",
+    "react-query": "^3.39.3",
     "zod": "^3.20.6"
   },
   "devDependencies": {
