--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.9.0",
+    "axios": "^1.3.4",
     "daisyui": "^2.51.4",
     "i18next": "^22.4.12",
     "next": "^13.2.1",
